--- a/app/src/main/res/layout/controls.xml
+++ b/app/src/main/res/layout/controls.xml
@@ -4,12 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/button_log"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.widget.Button
+        android:id="@+id/record_button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/app_name" />
+        android:background="@drawable/button_select"
+        android:shadowColor="#A8A8A8"
+
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
