--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1"
-    android:orientation="vertical">
+    android:configChanges="screenSize|orientation">
 
     <include
         android:id="@+id/controls_layout"
