--- a/app/src/main/res/layout/controls.xml
+++ b/app/src/main/res/layout/controls.xml
@@ -19,4 +19,14 @@
         android:shadowRadius="5"
         android:textColor="#FFFFFF" />
 
+    <Button
+        android:id="@+id/settings_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ic_settings"/>
+
+
 </RelativeLayout>
