--- a/app/src/main/res/layout/controls.xml
+++ b/app/src/main/res/layout/controls.xml
@@ -28,5 +28,11 @@
         android:layout_marginRight="10dp"
         android:background="@drawable/ic_settings"/>
 
+    <Button
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="login" />
+
 
 </RelativeLayout>
