--- a/app/src/main/res/layout/controls.xml
+++ b/app/src/main/res/layout/controls.xml
@@ -34,5 +34,11 @@
         android:layout_height="wrap_content"
         android:text="login" />
 
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="logot" />
+
 
 </RelativeLayout>
