Sube a file.io si es menor de 100MB

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -28,6 +28,11 @@
         android:defaultValue="false"
         android:key="anon"
         android:title="AnonFiles"/>
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="fileio"
+        android:title="File.io"
+        android:summary="@string/fileio_summary"/>
     </PreferenceCategory>
 
 
