--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -1,20 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#656565"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#232323"
         android:padding="10dp"
-        android:text="Contraseña" />
+        android:text="Contraseña"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="235dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="@string/dialog_request" />
@@ -28,8 +27,18 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="Contraseña"
-        android:inputType="textEmailAddress" />
+        android:inputType="textPassword"
+        android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/accept"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="Aceptar"
+        android:textAlignment="center" />
 
 
 </LinearLayout>
